# image-set-tag-editor

./: CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  tailwind.config.ts  vite.config.ts
.github/workflows/: release.yml
src/: app.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/server/: mod.rs
src/lib/: bindings.ts  stores.ts
src/lib/components/: ModalCustomCSS.svelte  TagHelper.svelte
src/routes/: +layout.svelte  +page.svelte
